Add the sigmoid approximation

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -17,19 +17,19 @@
     "can be represented by a modified Heaviside function for each other node:\n",
     "\n",
     "$$\n",
-    "\\mu = 1.04 H(x - 25)\n",
+    "\\mu = 1.04 H(25 - x)\n",
     "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc6e60158dfc4bf29756c189326fb0b8",
+       "model_id": "5fa661d875014ade8e192ca264873f12",
        "version_major": 2,
        "version_minor": 0
       },
@@ -39,16 +39,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 1.0, 'Crowding cost, ideal Heaviside')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -58,16 +48,62 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "x = np.linspace(0, 40, 200)\n",
-    "y = np.piecewise(\n",
+    "μ = np.piecewise(\n",
     "    x,\n",
     "    (x <= 25, x > 25),\n",
-    "    (1, 1.04),\n",
+    "    (1.04, 1.00),\n",
     ")\n",
-    "plt.plot(x, y)\n",
+    "plt.plot(x, μ)\n",
+    "plt.grid()\n",
     "plt.xlabel('Distance between these two nodes')\n",
     "plt.ylabel('Cost')\n",
+    "plt.title('Crowding cost, ideal Heaviside')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, this cost function is inconvenient, because it prevents any kind of continuous optimizer from working. It is non-differentiable and so standard techniques like gradient descent will not work. Instead, the suggested approach is to make a continuous sigmoid approximation:\n",
+    "\n",
+    "$$\n",
+    "\\mu \\approx 1 + \\frac {1.04 - 1}\n",
+    "{1 + e^{\\alpha (x - 25)}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b7bd84d33619460dbd5ed420a0df7c4a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "α = 0.3\n",
+    "x = np.linspace(0, 40, 200)\n",
+    "μ = 1 + (1.04 - 1)/(1 + np.exp(α*(x - 25)))\n",
+    "plt.figure()\n",
+    "plt.plot(x, μ)\n",
     "plt.grid()\n",
-    "plt.title('Crowding cost, ideal Heaviside')"
+    "plt.xlabel('Distance between these two nodes')\n",
+    "plt.ylabel('Cost')\n",
+    "plt.title(f'Crowding cost, approximate sigmoid, α={α}')\n",
+    "plt.show()"
    ]
   },
   {
