--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5fa661d875014ade8e192ca264873f12",
+       "model_id": "7e9c69891a104a86a5302d96ccbd9add",
        "version_major": 2,
        "version_minor": 0
       },
@@ -54,10 +54,10 @@
     "    (1.04, 1.00),\n",
     ")\n",
     "plt.plot(x, μ)\n",
-    "plt.grid()\n",
+    "plt.title('Crowding cost, ideal Heaviside')\n",
     "plt.xlabel('Distance between these two nodes')\n",
     "plt.ylabel('Cost')\n",
-    "plt.title('Crowding cost, ideal Heaviside')\n",
+    "plt.grid()\n",
     "plt.show()"
    ]
   },
@@ -75,13 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7bd84d33619460dbd5ed420a0df7c4a",
+       "model_id": "f3e47202495b47aaa54c7cb927148417",
        "version_major": 2,
        "version_minor": 0
       },
@@ -94,15 +94,16 @@
     }
    ],
    "source": [
-    "α = 0.3\n",
-    "x = np.linspace(0, 40, 200)\n",
+    "α = np.array([0.3, 0.5, 1, 5], ndmin=2)\n",
+    "x = np.array(np.linspace(0, 40, 500), ndmin=2).T\n",
     "μ = 1 + (1.04 - 1)/(1 + np.exp(α*(x - 25)))\n",
     "plt.figure()\n",
     "plt.plot(x, μ)\n",
-    "plt.grid()\n",
+    "plt.title('Crowding cost, approximate sigmoid, various α')\n",
     "plt.xlabel('Distance between these two nodes')\n",
     "plt.ylabel('Cost')\n",
-    "plt.title(f'Crowding cost, approximate sigmoid, α={α}')\n",
+    "plt.legend(α.flatten())\n",
+    "plt.grid()\n",
     "plt.show()"
    ]
   },
