--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -9,27 +9,30 @@
     "This problem has been discussed on\n",
     "[Computer Science Stack Exchange](https://cs.stackexchange.com/questions/127815).\n",
     "\n",
-    "In the ideal (discrete) case, a constraint such as the first one mentioned in the\n",
+    "In the ideal (discrete) case, simple cost factors such as NPC pair relationships mentioned in the\n",
     "[wiki](https://terraria.gamepedia.com/NPCs#Happiness):\n",
     "\n",
-    "> Two or more other NPCs within 25 tiles (for each additional NPC): 104%\n",
+    "> - For each Loved NPC within 25 tiles: 90%\n",
+    "> - For each Liked NPC within 25 tiles: 95%\n",
+    "> - For each Disliked NPC within 25 tiles: 105%\n",
+    "> - For each Hated NPC within 25 tiles: 110%\n",
     "\n",
-    "can be represented by a modified Heaviside function for each other node:\n",
+    "can be represented by a modified Heaviside function for each other node, e.g.:\n",
     "\n",
     "$$\n",
-    "\\mu = 1.04 H(25 - x)\n",
+    "\\mu = 1 + (1.05 - 1) H(25 - d)\n",
     "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e9c69891a104a86a5302d96ccbd9add",
+       "model_id": "1de2406353234bfa84795372784a5744",
        "version_major": 2,
        "version_minor": 0
       },
@@ -47,16 +50,12 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "x = np.linspace(0, 40, 200)\n",
-    "μ = np.piecewise(\n",
-    "    x,\n",
-    "    (x <= 25, x > 25),\n",
-    "    (1.04, 1.00),\n",
-    ")\n",
-    "plt.plot(x, μ)\n",
-    "plt.title('Crowding cost, ideal Heaviside')\n",
+    "d = np.linspace(0, 40, 200)\n",
+    "μ = 1 + (1.05 - 1)*np.heaviside(25 - d, 0.5)\n",
+    "plt.plot(d, μ)\n",
+    "plt.title('\"Disliked\" cost, ideal Heaviside')\n",
     "plt.xlabel('Distance between these two nodes')\n",
-    "plt.ylabel('Cost')\n",
+    "plt.ylabel('Cost factor')\n",
     "plt.grid()\n",
     "plt.show()"
    ]
@@ -65,23 +64,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, this cost function is inconvenient, because it prevents any kind of continuous optimizer from working. It is non-differentiable and so standard techniques like gradient descent will not work. Instead, the suggested approach is to make a continuous sigmoid approximation:\n",
+    "However, this cost function is inconvenient, because it prevents any kind of continuous optimizer from working. It is non-differentiable and so standard techniques like gradient descent will not work. Instead, the suggested approach is to make a continuous sigmoid approximation. Increasing values of $\\alpha$ will improve the approximation:\n",
     "\n",
     "$$\n",
-    "\\mu \\approx 1 + \\frac {1.04 - 1}\n",
-    "{1 + e^{\\alpha (x - 25)}}\n",
+    "\\mu = 1 + \\lim_{\\alpha \\to \\infty} \n",
+    "\\frac {1.05 - 1}\n",
+    "{1 + e^{\\alpha (d - 25)}}\n",
     "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3e47202495b47aaa54c7cb927148417",
+       "model_id": "250ac86279ba41a8a986a384f4040b0e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -94,17 +94,73 @@
     }
    ],
    "source": [
-    "α = np.array([0.3, 0.5, 1, 5], ndmin=2)\n",
-    "x = np.array(np.linspace(0, 40, 500), ndmin=2).T\n",
-    "μ = 1 + (1.04 - 1)/(1 + np.exp(α*(x - 25)))\n",
+    "α = np.array([0.2, 0.3, 0.5, 1, 4], ndmin=2)\n",
+    "d = np.array(np.linspace(0, 40, 500), ndmin=2).T\n",
+    "μ = 1 + (1.05 - 1)/(1 + np.exp(α*(d - 25)))\n",
     "plt.figure()\n",
-    "plt.plot(x, μ)\n",
-    "plt.title('Crowding cost, approximate sigmoid, various α')\n",
+    "plt.plot(d, μ)\n",
+    "plt.title('\"Disliked\" cost, approximate sigmoid, various α')\n",
     "plt.xlabel('Distance between these two nodes')\n",
-    "plt.ylabel('Cost')\n",
+    "plt.ylabel('Cost factor')\n",
     "plt.legend(α.flatten())\n",
     "plt.grid()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Biome costs will be more complex:\n",
+    "\n",
+    "> - Located in a Loved biome: 90%\n",
+    "> - Located in a Liked biome: 95%\n",
+    "> - Located in a Disliked biome: 105%\n",
+    "> - Located in a Hated biome: 110%\n",
+    "\n",
+    "because they will sometimes require a two-dimensional cost function. The cost function depends on the calculated quadrant:\n",
+    "\n",
+    "$$\\theta \\in \\text{I}, 0 \\le \\theta < 4$$\n",
+    "\n",
+    "$$\n",
+    "\\theta=\\mod\\left(\n",
+    "   \\left\\lfloor \\frac {2 \\text{atan2}(y,x)} \\pi \\right\\rfloor,\n",
+    "   4\n",
+    "\\right)\n",
+    "$$\n",
+    "\n",
+    "or as a piece-wise function,\n",
+    "\n",
+    "$$\n",
+    "\\theta = \\begin{cases}\n",
+    "  0  & x \\ge 0, y \\ge 0 \\\\\n",
+    "  1  & x <   0, y \\ge 0 \\\\\n",
+    "  2  & x <   0, y <   0 \\\\\n",
+    "  3  & x \\ge 0, y <   0 \\\\\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "$$b_{\\theta} \\in \\text{R}, b_{\\theta} > 0 $$\n",
+    "\n",
+    "For the ideal case,\n",
+    "\n",
+    "$$\\mu = b_{\\theta}$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "By example, for _liked_ , _hated_ , _neutral_ and _neutral_ biomes in quadrants I through IV respectively:\n",
+    "\n",
+    "$$b = (0.95, 1.10, 1.00, 1.00)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Multi-node interactions will also be more complex:\n",
+    "\n",
+    "> - Two or more other NPCs within 25 tiles (for each additional NPC): 104%\n",
+    "> - No more than one other NPC within 25 tiles and no more than three other NPCs (not counting the NPCs within 25 tiles) within 120 tiles: 90%"
    ]
   },
   {
