--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -26,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1de2406353234bfa84795372784a5744",
+       "model_id": "a5827b11c7bc4618b5539dd5a9a95a6d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -52,6 +52,7 @@
     "\n",
     "d = np.linspace(0, 40, 200)\n",
     "μ = 1 + (1.05 - 1)*np.heaviside(25 - d, 0.5)\n",
+    "plt.figure(1)\n",
     "plt.plot(d, μ)\n",
     "plt.title('\"Disliked\" cost, ideal Heaviside')\n",
     "plt.xlabel('Distance between these two nodes')\n",
@@ -75,13 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "250ac86279ba41a8a986a384f4040b0e",
+       "model_id": "cddba4145d9343e995eadaebc5c1b409",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,7 +98,7 @@
     "α = np.array([0.2, 0.3, 0.5, 1, 4], ndmin=2)\n",
     "d = np.array(np.linspace(0, 40, 500), ndmin=2).T\n",
     "μ = 1 + (1.05 - 1)/(1 + np.exp(α*(d - 25)))\n",
-    "plt.figure()\n",
+    "plt.figure(2)\n",
     "plt.plot(d, μ)\n",
     "plt.title('\"Disliked\" cost, approximate sigmoid, various α')\n",
     "plt.xlabel('Distance between these two nodes')\n",
@@ -146,11 +147,65 @@
     "\n",
     "$$\\mu = b_{\\theta}$$\n",
     "\n",
+    "For the approximated case, the cost factor must rely on all four quadrants:\n",
+    "\n",
+    "$$\n",
+    "\\mu = 1 + \\sum_{\\theta=0}^3\n",
+    "\\lim_{\\alpha \\to \\infty}\n",
+    "\\frac {b_\\theta - 1}\n",
+    "{\n",
+    "    \\left(1 + e^{\\alpha x \\sqrt{2} \\cos\\pi(\\theta+0.5)/2)} \\right)\n",
+    "    \\left(1 + e^{\\alpha y \\sqrt{2} \\sin\\pi(\\theta+0.5)/2)} \\right)\n",
+    "}\n",
+    "$$\n",
+    "\n",
     "\n",
     "\n",
     "By example, for _liked_ , _hated_ , _neutral_ and _neutral_ biomes in quadrants I through IV respectively:\n",
     "\n",
     "$$b = (0.95, 1.10, 1.00, 1.00)$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e186e249611a4ebbaa705bfc4f7d1c9d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "α = 2\n",
+    "axis = np.linspace(-5, 5, 200)\n",
+    "x, y = np.meshgrid(axis, axis)\n",
+    "b  = np.array((0.95,  1.10,  1.00,  1.00), ndmin=3)\n",
+    "xs = np.array((1, -1, -1,  1), ndmin=3)\n",
+    "ys = np.array((1,  1, -1, -1), ndmin=3)\n",
+    "\n",
+    "μ = 1 + (\n",
+    "    (b - 1)\n",
+    "    / (1 + np.exp(-α*xs * x[:, :, np.newaxis]))\n",
+    "    / (1 + np.exp(-α*ys * y[:, :, np.newaxis]))\n",
+    ").sum(axis=2)\n",
+    "\n",
+    "plt.figure(3)\n",
+    "plot = plt.contour(x, y, μ, levels=15)\n",
+    "plt.title(f'Biome cost, approximate sigmoid, α={α}')\n",
+    "plt.clabel(plot)\n",
+    "plt.grid()\n",
+    "plt.show()"
    ]
   },
   {
