Move out sign functions into separate statements

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -26,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5827b11c7bc4618b5539dd5a9a95a6d",
+       "model_id": "6a1158f05bf9442bb8ae238d86c5b025",
        "version_major": 2,
        "version_minor": 0
       },
@@ -76,13 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cddba4145d9343e995eadaebc5c1b409",
+       "model_id": "bf859148000941ee9d861242984caa4f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,9 +121,8 @@
     "\n",
     "because they will sometimes require a two-dimensional cost function. The cost function depends on the calculated quadrant:\n",
     "\n",
-    "$$\\theta \\in \\text{I}, 0 \\le \\theta < 4$$\n",
-    "\n",
     "$$\n",
+    "\\theta \\in \\text{I}, 0 \\le \\theta < 4 \\\\\n",
     "\\theta=\\mod\\left(\n",
     "   \\left\\lfloor \\frac {2 \\text{atan2}(y,x)} \\pi \\right\\rfloor,\n",
     "   4\n",
@@ -138,10 +137,9 @@
     "  1  & x <   0, y \\ge 0 \\\\\n",
     "  2  & x <   0, y <   0 \\\\\n",
     "  3  & x \\ge 0, y <   0 \\\\\n",
-    "\\end{cases}\n",
+    "\\end{cases} \\\\\n",
+    "b_{\\theta} \\in \\text{R}, b_{\\theta} > 0\n",
     "$$\n",
-    "\n",
-    "$$b_{\\theta} \\in \\text{R}, b_{\\theta} > 0 $$\n",
     "\n",
     "For the ideal case,\n",
     "\n",
@@ -150,16 +148,16 @@
     "For the approximated case, the cost factor must rely on all four quadrants:\n",
     "\n",
     "$$\n",
+    "s_x(\\theta) = \\sqrt{2} \\cos \\frac {\\pi(\\theta+0.5)} 2 = (+1, -1, -1, +1) \\\\\n",
+    "s_y(\\theta) = \\sqrt{2} \\sin \\frac {\\pi(\\theta+0.5)} 2 = (+1, +1, -1, -1) \\\\\n",
     "\\mu = 1 + \\sum_{\\theta=0}^3\n",
     "\\lim_{\\alpha \\to \\infty}\n",
     "\\frac {b_\\theta - 1}\n",
     "{\n",
-    "    \\left(1 + e^{\\alpha x \\sqrt{2} \\cos\\pi(\\theta+0.5)/2)} \\right)\n",
-    "    \\left(1 + e^{\\alpha y \\sqrt{2} \\sin\\pi(\\theta+0.5)/2)} \\right)\n",
+    "    \\left(1 + e^{\\alpha x s_x(\\theta)} \\right)\n",
+    "    \\left(1 + e^{\\alpha y s_y(\\theta)} \\right)\n",
     "}\n",
     "$$\n",
-    "\n",
-    "\n",
     "\n",
     "By example, for _liked_ , _hated_ , _neutral_ and _neutral_ biomes in quadrants I through IV respectively:\n",
     "\n",
@@ -168,13 +166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e186e249611a4ebbaa705bfc4f7d1c9d",
+       "model_id": "8e2fe4a473ef47088ee0f1a0dc3953b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -191,13 +189,13 @@
     "axis = np.linspace(-5, 5, 200)\n",
     "x, y = np.meshgrid(axis, axis)\n",
     "b  = np.array((0.95,  1.10,  1.00,  1.00), ndmin=3)\n",
-    "xs = np.array((1, -1, -1,  1), ndmin=3)\n",
-    "ys = np.array((1,  1, -1, -1), ndmin=3)\n",
+    "sx = np.array((1, -1, -1,  1), ndmin=3)\n",
+    "sy = np.array((1,  1, -1, -1), ndmin=3)\n",
     "\n",
     "μ = 1 + (\n",
     "    (b - 1)\n",
-    "    / (1 + np.exp(-α*xs * x[:, :, np.newaxis]))\n",
-    "    / (1 + np.exp(-α*ys * y[:, :, np.newaxis]))\n",
+    "    / (1 + np.exp(-α*sx * x[:, :, np.newaxis]))\n",
+    "    / (1 + np.exp(-α*sy * y[:, :, np.newaxis]))\n",
     ").sum(axis=2)\n",
     "\n",
     "plt.figure(3)\n",
