Thoughts on multi-node situations

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -213,15 +213,22 @@
     "Multi-node interactions will also be more complex:\n",
     "\n",
     "> - Two or more other NPCs within 25 tiles (for each additional NPC): 104%\n",
-    "> - No more than one other NPC within 25 tiles and no more than three other NPCs (not counting the NPCs within 25 tiles) within 120 tiles: 90%"
+    "\n",
+    "This implies:\n",
+    "\n",
+    "- Calculate the distance to all other nodes\n",
+    "- Find the closest node and remove it from the cost\n",
+    "- For all other nodes, add up sigmoid circles of diameter 25\n",
+    "\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "> - No more than one other NPC within 25 tiles and no more than three other NPCs (not counting the NPCs within 25 tiles) within 120 tiles: 90%"
+   ]
   }
  ],
  "metadata": {
