Github jupyter render does not obey Mathjax endlines

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -32,7 +32,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a1158f05bf9442bb8ae238d86c5b025",
+       "model_id": "ac52c185bdc842b79c544cf9ff920c99",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,7 +82,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf859148000941ee9d861242984caa4f",
+       "model_id": "d1c7618d5187422ab158aa0021b54f80",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,8 +121,9 @@
     "\n",
     "because they will sometimes require a two-dimensional cost function. The cost function depends on the calculated quadrant:\n",
     "\n",
+    "$$\\theta \\in \\text{I}, 0 \\le \\theta < 4$$\n",
+    "\n",
     "$$\n",
-    "\\theta \\in \\text{I}, 0 \\le \\theta < 4 \\\\\n",
     "\\theta=\\mod\\left(\n",
     "   \\left\\lfloor \\frac {2 \\text{atan2}(y,x)} \\pi \\right\\rfloor,\n",
     "   4\n",
@@ -137,9 +138,10 @@
     "  1  & x <   0, y \\ge 0 \\\\\n",
     "  2  & x <   0, y <   0 \\\\\n",
     "  3  & x \\ge 0, y <   0 \\\\\n",
-    "\\end{cases} \\\\\n",
-    "b_{\\theta} \\in \\text{R}, b_{\\theta} > 0\n",
+    "\\end{cases}\n",
     "$$\n",
+    "\n",
+    "$$b_{\\theta} \\in \\text{R}, b_{\\theta} > 0$$\n",
     "\n",
     "For the ideal case,\n",
     "\n",
@@ -147,9 +149,10 @@
     "\n",
     "For the approximated case, the cost factor must rely on all four quadrants:\n",
     "\n",
+    "$$s_x(\\theta) = \\sqrt{2} \\cos \\frac {\\pi(\\theta+0.5)} 2 = (+1, -1, -1, +1)$$\n",
+    "$$s_y(\\theta) = \\sqrt{2} \\sin \\frac {\\pi(\\theta+0.5)} 2 = (+1, +1, -1, -1)$$\n",
+    "\n",
     "$$\n",
-    "s_x(\\theta) = \\sqrt{2} \\cos \\frac {\\pi(\\theta+0.5)} 2 = (+1, -1, -1, +1) \\\\\n",
-    "s_y(\\theta) = \\sqrt{2} \\sin \\frac {\\pi(\\theta+0.5)} 2 = (+1, +1, -1, -1) \\\\\n",
     "\\mu = 1 + \\sum_{\\theta=0}^3\n",
     "\\lim_{\\alpha \\to \\infty}\n",
     "\\frac {b_\\theta - 1}\n",
@@ -172,7 +175,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e2fe4a473ef47088ee0f1a0dc3953b3",
+       "model_id": "7395f0fe51154a3b8c31eff3d3ac29ed",
        "version_major": 2,
        "version_minor": 0
       },
