Github also drops one-line formulae

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -121,7 +121,9 @@
     "\n",
     "because they will sometimes require a two-dimensional cost function. The cost function depends on the calculated quadrant:\n",
     "\n",
-    "$$\\theta \\in \\text{I}, 0 \\le \\theta < 4$$\n",
+    "$$\n",
+    "\\theta \\in \\text{I}, 0 \\le \\theta < 4\n",
+    "$$\n",
     "\n",
     "$$\n",
     "\\theta=\\mod\\left(\n",
@@ -149,8 +151,15 @@
     "\n",
     "For the approximated case, the cost factor must rely on all four quadrants:\n",
     "\n",
-    "$$s_x(\\theta) = \\sqrt{2} \\cos \\frac {\\pi(\\theta+0.5)} 2 = (+1, -1, -1, +1)$$\n",
-    "$$s_y(\\theta) = \\sqrt{2} \\sin \\frac {\\pi(\\theta+0.5)} 2 = (+1, +1, -1, -1)$$\n",
+    "$$\n",
+    "s_x(\\theta) = \\sqrt{2} \\cos \\frac {\\pi(\\theta+0.5)} 2 \n",
+    "= (+1, -1, -1, +1)\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "s_y(\\theta) = \\sqrt{2} \\sin \\frac {\\pi(\\theta+0.5)} 2 \n",
+    "= (+1, +1, -1, -1)\n",
+    "$$\n",
     "\n",
     "$$\n",
     "\\mu = 1 + \\sum_{\\theta=0}^3\n",
