Crowding part 1 almost done

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -4,10 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Introduction\n",
+    "---\n",
+    "\n",
     "There are 19 NPCs, 25 in hard mode. That means up to 50 discrete variables to optimize.\n",
     "\n",
     "This problem has been discussed on\n",
     "[Computer Science Stack Exchange](https://cs.stackexchange.com/questions/127815).\n",
+    "\n",
+    "Simple Pair Costs\n",
+    "---\n",
     "\n",
     "In the ideal (discrete) case, simple cost factors such as NPC pair relationships mentioned in the\n",
     "[wiki](https://terraria.gamepedia.com/NPCs#Happiness):\n",
@@ -32,7 +38,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac52c185bdc842b79c544cf9ff920c99",
+       "model_id": "784643dc1d2c426e95143921c41365e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -65,6 +71,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Sigmoid Approximation\n",
+    "---\n",
+    "\n",
     "However, this cost function is inconvenient, because it prevents any kind of continuous optimizer from working. It is non-differentiable and so standard techniques like gradient descent will not work. Instead, the suggested approach is to make a continuous sigmoid approximation. Increasing values of $\\alpha$ will improve the approximation:\n",
     "\n",
     "$$\n",
@@ -82,7 +91,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1c7618d5187422ab158aa0021b54f80",
+       "model_id": "62d59e1540714c41867fd7253a1a321d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -100,10 +109,10 @@
     "μ = 1 + (1.05 - 1)/(1 + np.exp(α*(d - 25)))\n",
     "plt.figure(2)\n",
     "plt.plot(d, μ)\n",
-    "plt.title('\"Disliked\" cost, approximate sigmoid, various α')\n",
+    "plt.title('\"Disliked\" cost, approximate sigmoid')\n",
     "plt.xlabel('Distance between these two nodes')\n",
     "plt.ylabel('Cost factor')\n",
-    "plt.legend(α.flatten())\n",
+    "plt.legend(α.flatten(), title='α')\n",
     "plt.grid()\n",
     "plt.show()"
    ]
@@ -112,6 +121,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Biome costs\n",
+    "---\n",
+    "\n",
     "Biome costs will be more complex:\n",
     "\n",
     "> - Located in a Loved biome: 90%\n",
@@ -184,7 +196,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7395f0fe51154a3b8c31eff3d3ac29ed",
+       "model_id": "11d05f831d5d41539eefecfd77153352",
        "version_major": 2,
        "version_minor": 0
       },
@@ -222,24 +234,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Crowding Cost\n",
+    "---\n",
+    "\n",
     "Multi-node interactions will also be more complex:\n",
     "\n",
-    "> - Two or more other NPCs within 25 tiles (for each additional NPC): 104%\n",
+    "> Two or more other NPCs within 25 tiles (for each additional NPC): 104%\n",
     "\n",
     "This implies:\n",
     "\n",
-    "- Calculate the distance to all other nodes\n",
+    "- Calculate the Frobenius norm relative to all other nodes\n",
     "- Find the closest node and remove it from the cost\n",
-    "- For all other nodes, add up sigmoid circles of diameter 25\n",
+    "- For all other nodes, calculate the product of sigmoid circles of diameter 25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1cc1168e91e3469dbb1bcbf3fe830fee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "α = 0.5\n",
+    "this_node = np.array((2, 1))\n",
+    "other_nodes = np.array((\n",
+    "    (-20, 30),\n",
+    "    ( 20, 21),\n",
+    "    (  5,  6),\n",
+    "    ( 26,-20),\n",
+    "))\n",
+    "distances = np.linalg.norm(other_nodes - this_node, axis=1)\n",
+    "imin = np.argmin(distances)\n",
+    "nodes_for_dist = other_nodes[\n",
+    "    np.arange(len(other_nodes)) != imin\n",
+    "]\n",
     "\n",
-    "\n"
+    "axis = np.linspace(-50, 50, 200)\n",
+    "x, y = np.meshgrid(axis, axis)\n",
+    "grid = np.stack((x, y), axis=2)[:, :, np.newaxis, :]\n",
+    "node_dists = np.linalg.norm(\n",
+    "    grid - nodes_for_dist, axis=3\n",
+    ")\n",
+    "μ = (\n",
+    "    1 + (\n",
+    "        (1.04 - 1)/(\n",
+    "            1 + np.exp(α*(node_dists - 25))\n",
+    "        )\n",
+    "    )\n",
+    ").prod(axis=2)\n",
+    "\n",
+    "plt.figure(4)\n",
+    "plot = plt.contour(x, y, μ, levels=8)\n",
+    "plt.title(f'Crowding cost, approximate sigmoid, α={α}')\n",
+    "plt.clabel(plot)\n",
+    "plt.grid()\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> - No more than one other NPC within 25 tiles and no more than three other NPCs (not counting the NPCs within 25 tiles) within 120 tiles: 90%"
+    "Complex Crowding Cost\n",
+    "---\n",
+    "\n",
+    "> No more than one other NPC within 25 tiles and no more than three other NPCs (not counting the NPCs within 25 tiles) within 120 tiles: 90%"
    ]
   }
  ],
