--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -7,10 +7,16 @@
     "Introduction\n",
     "---\n",
     "\n",
-    "There are 19 NPCs, 25 in hard mode. That means up to 50 discrete variables to optimize.\n",
-    "\n",
     "This problem has been discussed on\n",
-    "[Computer Science Stack Exchange](https://cs.stackexchange.com/questions/127815).\n",
+    "[Computer Science Stack Exchange](https://cs.stackexchange.com/questions/127815). To recap:\n",
+    "\n",
+    "There are up to 25 nodes, each representing a\n",
+    "[Terraria](https://en.wikipedia.org/wiki/Terraria) NPC's home location. These locations can be optimized based on a collection of cost factors. All factors are cost multipliers (higher is worse). Distances are discrete integers. None of the factors are continuous, and none are differentiable in space since they are all piece-wise. As a result, something like Gradient Descent is not possible without continuous approximation.\n",
+    "\n",
+    "The 2D coordinates of each node are discrete and - for these purposes - unbounded. Since there are 25 nodes, there are 50 integer variables (xy for each node) to optimize. The hope is that even though there are no bounds, there will be enough sub-1.0 factors to have the optimization converge rather than force the nodes to fly apart.\n",
+    "\n",
+    "In most modes of this optimization problem there are also between 2-3 biome regions extending out infinitely from the origin separated by straight lines. Each biome exactly encompasses one or more Cartesian quadrants. Each imposes a fixed cost or benefit to each node, but in the ideal case this cost does not change the \"farther into the biome\" a node gets. If I get the base optimization working well enough for a given biome configuration, I might expand this to selection of a biome configuration, for which there are currently 46 possibilities.\n",
+    "\n",
     "\n",
     "Simple Pair Costs\n",
     "---\n",
@@ -38,7 +44,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "784643dc1d2c426e95143921c41365e9",
+       "model_id": "05dd8725ca964d2ea4f89a17fbe669a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -91,7 +97,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62d59e1540714c41867fd7253a1a321d",
+       "model_id": "d82222820f414418b746585df1ff701f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -196,7 +202,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11d05f831d5d41539eefecfd77153352",
+       "model_id": "22960d4efa6e4735b7e6196d2441e368",
        "version_major": 2,
        "version_minor": 0
       },
@@ -256,7 +262,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1cc1168e91e3469dbb1bcbf3fe830fee",
+       "model_id": "09f8e0f8a536435eb6ecfc0f6a2c444d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -301,6 +307,8 @@
     "plot = plt.contour(x, y, μ, levels=8)\n",
     "plt.title(f'Crowding cost, approximate sigmoid, α={α}')\n",
     "plt.clabel(plot)\n",
+    "plt.scatter(this_node[0], this_node[1], c='r')\n",
+    "plt.scatter(other_nodes[:, 0], other_nodes[:, 1], c='k')\n",
     "plt.grid()\n",
     "plt.show()"
    ]
