Use products instead of sums

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -44,7 +44,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05dd8725ca964d2ea4f89a17fbe669a7",
+       "model_id": "2822a9201cba414b9cf66beb1aa1fe1e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,7 +97,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d82222820f414418b746585df1ff701f",
+       "model_id": "67ef3b1c30304adab42a3bf1b9494fa7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -137,7 +137,7 @@
     "> - Located in a Disliked biome: 105%\n",
     "> - Located in a Hated biome: 110%\n",
     "\n",
-    "because they will sometimes require a two-dimensional cost function. The cost function depends on the calculated quadrant:\n",
+    "because they require a two-dimensional cost function. The cost function depends on the calculated quadrant:\n",
     "\n",
     "$$\n",
     "\\theta \\in \\text{I}, 0 \\le \\theta < 4\n",
@@ -180,13 +180,15 @@
     "$$\n",
     "\n",
     "$$\n",
-    "\\mu = 1 + \\sum_{\\theta=0}^3\n",
-    "\\lim_{\\alpha \\to \\infty}\n",
-    "\\frac {b_\\theta - 1}\n",
-    "{\n",
-    "    \\left(1 + e^{\\alpha x s_x(\\theta)} \\right)\n",
-    "    \\left(1 + e^{\\alpha y s_y(\\theta)} \\right)\n",
-    "}\n",
+    "\\mu(x, y) = \\prod_{\\theta=0}^3\n",
+    "\\left(1 + \n",
+    "    \\lim_{\\alpha \\to \\infty}\n",
+    "    \\frac {b_\\theta - 1}\n",
+    "    {\n",
+    "        \\left(1 + e^{\\alpha x s_x(\\theta)} \\right)\n",
+    "        \\left(1 + e^{\\alpha y s_y(\\theta)} \\right)\n",
+    "    }\n",
+    "\\right)\n",
     "$$\n",
     "\n",
     "By example, for _liked_ , _hated_ , _neutral_ and _neutral_ biomes in quadrants I through IV respectively:\n",
@@ -202,7 +204,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22960d4efa6e4735b7e6196d2441e368",
+       "model_id": "5f3e7df46ef4433f8b2d4d19ca8f08b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -222,11 +224,11 @@
     "sx = np.array((1, -1, -1,  1), ndmin=3)\n",
     "sy = np.array((1,  1, -1, -1), ndmin=3)\n",
     "\n",
-    "μ = 1 + (\n",
-    "    (b - 1)\n",
+    "μ = (\n",
+    "    1 + (b - 1)\n",
     "    / (1 + np.exp(-α*sx * x[:, :, np.newaxis]))\n",
     "    / (1 + np.exp(-α*sy * y[:, :, np.newaxis]))\n",
-    ").sum(axis=2)\n",
+    ").prod(axis=2)\n",
     "\n",
     "plt.figure(3)\n",
     "plot = plt.contour(x, y, μ, levels=15)\n",
@@ -251,7 +253,28 @@
     "\n",
     "- Calculate the Frobenius norm relative to all other nodes\n",
     "- Find the closest node and remove it from the cost\n",
-    "- For all other nodes, calculate the product of sigmoid circles of diameter 25"
+    "- For all other nodes, calculate the product of sigmoid circles of diameter 25\n",
+    "\n",
+    "For node $n$, and other nodes $m_i$, remove the node with this minimum for the Frobenius norm:\n",
+    "\n",
+    "$$\n",
+    "\\min_i \\left|\\middle|\n",
+    "m_i - n\n",
+    "\\middle|\\right|_F\n",
+    "$$\n",
+    "\n",
+    "Then for the remaining nodes, calculate their radial sigmoid:\n",
+    "\n",
+    "$$\n",
+    "\\mu(x, y) = \\prod_i \\left(\n",
+    "    1 + \\frac {1.04 - 1}\n",
+    "    {\n",
+    "        1 + e^{\n",
+    "            \\alpha( ||m_i - n||_F - 25 )\n",
+    "        }\n",
+    "    }\n",
+    "\\right)\n",
+    "$$"
    ]
   },
   {
@@ -262,7 +285,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09f8e0f8a536435eb6ecfc0f6a2c444d",
+       "model_id": "1f578f23128f41f494b59f3b80fddb92",
        "version_major": 2,
        "version_minor": 0
       },
@@ -296,10 +319,8 @@
     "    grid - nodes_for_dist, axis=3\n",
     ")\n",
     "μ = (\n",
-    "    1 + (\n",
-    "        (1.04 - 1)/(\n",
-    "            1 + np.exp(α*(node_dists - 25))\n",
-    "        )\n",
+    "    1 + (1.04 - 1)/(\n",
+    "        1 + np.exp(α*(node_dists - 25))\n",
     "    )\n",
     ").prod(axis=2)\n",
     "\n",
