Grid behind data

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d664d45afd104af4ab4da5402e6b3337",
+       "model_id": "1b10e9be783b4a37b1af32a95626f2b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -80,8 +80,9 @@
     "\n",
     "d = np.linspace(0, 40, 200)\n",
     "μ = 1 + (1.05 - 1)*np.heaviside(25 - d, 0.5)\n",
-    "plt.figure(1)\n",
+    "fig = plt.figure(1)\n",
     "plt.plot(d, μ)\n",
+    "fig.axes[0].set_axisbelow(True)\n",
     "plt.title('\"Disliked\" cost, ideal Heaviside')\n",
     "plt.xlabel('Distance between these two nodes')\n",
     "plt.ylabel('Cost factor')\n",
@@ -113,7 +114,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64e085882bef43e0b54355fdfa9c7ff8",
+       "model_id": "6bef63e7eed34e929f24548ac637c598",
        "version_major": 2,
        "version_minor": 0
       },
@@ -129,8 +130,9 @@
     "α = np.array([0.2, 0.3, 0.5, 1, 4], ndmin=2)\n",
     "d = np.array(np.linspace(0, 40, 500), ndmin=2).T\n",
     "μ = 1 + (1.05 - 1)/(1 + np.exp(α*(d - 25)))\n",
-    "plt.figure(2)\n",
+    "fig = plt.figure(2)\n",
     "plt.plot(d, μ)\n",
+    "fig.axes[0].set_axisbelow(True)\n",
     "plt.title('\"Disliked\" cost, approximate sigmoid')\n",
     "plt.xlabel('Distance between these two nodes')\n",
     "plt.ylabel('Cost factor')\n",
@@ -201,8 +203,8 @@
     "    \\lim_{\\alpha \\to \\infty}\n",
     "    \\frac {b_\\theta - 1}\n",
     "    {\n",
-    "        \\left(1 + e^{\\alpha x s_x(\\theta)} \\right)\n",
-    "        \\left(1 + e^{\\alpha y s_y(\\theta)} \\right)\n",
+    "        \\left(1 + e^{-\\alpha x s_x(\\theta)} \\right)\n",
+    "        \\left(1 + e^{-\\alpha y s_y(\\theta)} \\right)\n",
     "    }\n",
     "\\right)\n",
     "$$\n",
@@ -220,7 +222,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab5157dab3844229ac191180c2224aab",
+       "model_id": "01a0cdbc4ff540259011847b3985639d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -246,8 +248,9 @@
     "    / (1 + np.exp(-α*sy * y[:, :, np.newaxis]))\n",
     ").prod(axis=2)\n",
     "\n",
-    "plt.figure(3)\n",
+    "fig = plt.figure(3)\n",
     "plot = plt.contour(x, y, μ, levels=15)\n",
+    "fig.axes[0].set_axisbelow(True)\n",
     "plt.title(f'Biome cost, approximate sigmoid, α={α}')\n",
     "plt.clabel(plot)\n",
     "plt.grid()\n",
@@ -303,7 +306,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43f2c1fbd42c4a8ca5a2e72eeaf30729",
+       "model_id": "9e063e53b12a4412af0e8fdb61fcd9db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -342,8 +345,9 @@
     "    )\n",
     ").prod(axis=2)\n",
     "\n",
-    "plt.figure(4)\n",
+    "fig = plt.figure(4)\n",
     "plot = plt.contour(x, y, μ, levels=8)\n",
+    "fig.axes[0].set_axisbelow(True)\n",
     "plt.title(f'Crowding cost, approximate sigmoid, α={α}')\n",
     "plt.clabel(plot)\n",
     "plt.scatter(this_node[0], this_node[1], c='r')\n",
