New heading levels

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "source": [
     "Introduction\n",
-    "---\n",
+    "===\n",
     "\n",
     "This problem has been discussed on\n",
     "[Computer Science Stack Exchange](https://cs.stackexchange.com/questions/127815). To recap:\n",
@@ -35,6 +35,8 @@
     "\n",
     "In most modes of this optimization problem there are also between 2-3 biome regions extending out infinitely from the origin separated by straight lines. Each biome exactly encompasses one or more Cartesian quadrants. Each imposes a fixed cost or benefit to each node, but in the ideal case this cost does not change the \"farther into the biome\" a node gets. If I get the base optimization working well enough for a given biome configuration, I might expand this to selection of a biome configuration, for which there are currently 46 possibilities.\n",
     "\n",
+    "Cost Analysis\n",
+    "===\n",
     "\n",
     "Simple Pair Costs\n",
     "---\n",
@@ -365,15 +367,13 @@
     "Complex Crowding Cost\n",
     "---\n",
     "\n",
-    "> No more than one other NPC within 25 tiles and no more than three other NPCs (not counting the NPCs within 25 tiles) within 120 tiles: 90%"
+    "> No more than one other NPC within 25 tiles and no more than three other NPCs (not counting the NPCs within 25 tiles) within 120 tiles: 90%\n",
+    "\n",
+    "This implies:\n",
+    "\n",
+    "- Outside of the area near NPCs, the cost will be 0.9\n",
+    "- "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
