--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -15,7 +15,9 @@
    "source": [
     "# %matplotlib widget for interactive mode, or\n",
     "# %matplotlib inline for print mode\n",
-    "%matplotlib widget"
+    "%matplotlib widget\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -64,7 +66,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b10e9be783b4a37b1af32a95626f2b8",
+       "model_id": "6eb5c800e55045ad9e5c2334a70ffcb6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -77,9 +79,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "d = np.linspace(0, 40, 200)\n",
     "μ = 1 + (1.05 - 1)*np.heaviside(25 - d, 0.5)\n",
     "fig = plt.figure(1)\n",
@@ -116,7 +115,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6bef63e7eed34e929f24548ac637c598",
+       "model_id": "e749667f38a54cd3af5285cbeab0aaaf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -224,7 +223,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01a0cdbc4ff540259011847b3985639d",
+       "model_id": "9c86ffe7c2db4cb1ab59309d12deb6a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -272,32 +271,42 @@
     "\n",
     "This implies:\n",
     "\n",
-    "- Calculate the Frobenius norm relative to all other nodes\n",
-    "- Find the closest node and remove it from the cost\n",
-    "- For all other nodes, calculate the product of sigmoid circles of diameter 25\n",
-    "\n",
-    "For node $n$, and other nodes $m_i$, remove the node with this minimum for the Frobenius norm:\n",
-    "\n",
-    "$$\n",
-    "\\min_i \\left|\\middle|\n",
-    "m_i - n\n",
-    "\\middle|\\right|_F\n",
-    "$$\n",
-    "\n",
-    "Then for the remaining nodes, calculate their radial sigmoid:\n",
+    "- For a given node being optimized, for each potential pair of coordinates being considered, relative to each other node, calculate the Frobenius norm\n",
+    "- Subtract a radius of 25 from the norm and use that for the sigmoid exponent\n",
+    "- Get the product $u$ of all such sigmoids for the current node\n",
+    "- Divide by 1.04 to discount the effect of only one proximate node\n",
+    "- Apply an outer parametric\n",
+    "  [softplus](https://en.wikipedia.org/wiki/Rectifier_(neural_networks)#Softplus)\n",
+    "  rectification to make the minimum of this cost component 1.0\n",
     "\n",
     "$$\n",
-    "\\mu(x, y) = \\prod_i \\left(\n",
+    "u(x, y) =\n",
+    "\\lim_{\\alpha_1 \\to \\infty}\n",
+    "\\prod_i \\left(\n",
     "    1 + \n",
-    "    \\lim_{\\alpha \\to \\infty}\n",
     "    \\frac {1.04 - 1}\n",
     "    {\n",
     "        1 + e^{\n",
-    "            \\alpha( ||m_i - n||_F - 25 )\n",
+    "            \\alpha_1( ||m_i - n||_F - 25 )\n",
     "        }\n",
     "    }\n",
     "\\right)\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\mu(x, y) = 1 + \n",
+    "\\lim_{\\alpha_2 \\to \\infty}\n",
+    "\\frac 1 {\\alpha_2}\n",
+    "\\ln \\left(\n",
+    "    1 + \\exp \\left(\n",
+    "        \\alpha_2 \\left(\n",
+    "            \\frac {u(x, y)} {1.04} - 1\n",
+    "        \\right)\n",
+    "    \\right)\n",
+    "\\right)\n",
+    "$$\n",
+    "\n",
+    "$\\alpha_2$ must be on the order of 100 since its coefficient (multiples of 0.04) is so low."
    ]
   },
   {
@@ -308,7 +317,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e063e53b12a4412af0e8fdb61fcd9db",
+       "model_id": "576f9c926c36443b925451afc0719573",
        "version_major": 2,
        "version_minor": 0
       },
@@ -321,38 +330,34 @@
     }
    ],
    "source": [
-    "α = 0.5\n",
-    "this_node = np.array((2, 1))\n",
-    "other_nodes = np.array((\n",
-    "    (-20, 30),\n",
-    "    ( 20, 21),\n",
-    "    (  5,  6),\n",
-    "    ( 26,-20),\n",
-    "))\n",
-    "distances = np.linalg.norm(other_nodes - this_node, axis=1)\n",
-    "imin = np.argmin(distances)\n",
-    "nodes_for_dist = other_nodes[\n",
-    "    np.arange(len(other_nodes)) != imin\n",
-    "]\n",
+    "α1 = 2\n",
+    "α2 = 100\n",
+    "C = 1.04\n",
     "\n",
-    "axis = np.linspace(-50, 50, 200)\n",
+    "other_nodes = np.array((\n",
+    "    (-25, 20),\n",
+    "    ( 15, 11),\n",
+    "    (  0, -4),\n",
+    "    ( 21,-30),\n",
+    "))\n",
+    "axis = np.linspace(-40, 40, 200)\n",
     "x, y = np.meshgrid(axis, axis)\n",
     "grid = np.stack((x, y), axis=2)[:, :, np.newaxis, :]\n",
     "node_dists = np.linalg.norm(\n",
-    "    grid - nodes_for_dist, axis=3\n",
+    "    grid - other_nodes, axis=3\n",
     ")\n",
-    "μ = (\n",
-    "    1 + (1.04 - 1)/(\n",
-    "        1 + np.exp(α*(node_dists - 25))\n",
+    "u = (\n",
+    "    1 + (C - 1)/(\n",
+    "        1 + np.exp(α1*(node_dists - 25))\n",
     "    )\n",
     ").prod(axis=2)\n",
+    "μ = 1 + np.log(1 + np.exp(α2*(u/C - 1)))/α2\n",
     "\n",
     "fig = plt.figure(4)\n",
     "plot = plt.contour(x, y, μ, levels=8)\n",
     "fig.axes[0].set_axisbelow(True)\n",
-    "plt.title(f'Crowding cost, approximate sigmoid, α={α}')\n",
+    "plt.title(f'Crowding cost, approximate sigmoid, α₁={α1}, α₂={α2}')\n",
     "plt.clabel(plot)\n",
-    "plt.scatter(this_node[0], this_node[1], c='r')\n",
     "plt.scatter(other_nodes[:, 0], other_nodes[:, 1], c='k')\n",
     "plt.grid()\n",
     "plt.show()"
@@ -362,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In Figure 4, the current node is in red, and the node closest to it is ignored in the cost calculation. The other three nodes form a cost surface gradient that wants to push the current node down and to the left.\n",
+    "In Figure 4, the current node is not shown since its position is varying for optimisation. Close to the outer two nodes, the cost is nearly 1.0, and there are visible steps to 1.04 and 1.04² where the radii of two and three nodes overlap, respectively.\n",
     "\n",
     "Complex Crowding Cost\n",
     "---\n",
@@ -371,8 +376,7 @@
     "\n",
     "This implies:\n",
     "\n",
-    "- Outside of the area near NPCs, the cost will be 0.9\n",
-    "- "
+    "- Outside of the area near NPCs, the cost will be 0.9"
    ]
   }
  ],
