More variable descriptions

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -180,13 +180,15 @@
     "\\end{cases}\n",
     "$$\n",
     "\n",
+    "Biome costs for each quadrant are then\n",
+    "\n",
     "$$b_{\\theta} \\in \\text{R}, b_{\\theta} > 0$$\n",
     "\n",
     "For the ideal case,\n",
     "\n",
     "$$\\mu = b_{\\theta}$$\n",
     "\n",
-    "For the approximated case, the cost factor must rely on all four quadrants:\n",
+    "For the approximated case, the cost factor must rely on all four quadrants. First we need to calculate or hard-code the quadrant signs:\n",
     "\n",
     "$$\n",
     "s_x(\\theta) = \\sqrt{2} \\cos \\frac {\\pi(\\theta+0.5)} 2 \n",
@@ -197,6 +199,8 @@
     "s_y(\\theta) = \\sqrt{2} \\sin \\frac {\\pi(\\theta+0.5)} 2 \n",
     "= (+1, +1, -1, -1)\n",
     "$$\n",
+    "\n",
+    "The approximated cost is then\n",
     "\n",
     "$$\n",
     "\\mu(x, y) = \\prod_{\\theta=0}^3\n",
@@ -269,15 +273,7 @@
     "\n",
     "> Two or more other NPCs within 25 tiles (for each additional NPC): 104%\n",
     "\n",
-    "This implies:\n",
-    "\n",
-    "- For a given node being optimized, for each potential pair of coordinates being considered, relative to each other node, calculate the Frobenius norm\n",
-    "- Subtract a radius of 25 from the norm and use that for the sigmoid exponent\n",
-    "- Get the product $u$ of all such sigmoids for the current node\n",
-    "- Divide by 1.04 to discount the effect of only one proximate node\n",
-    "- Apply an outer parametric\n",
-    "  [softplus](https://en.wikipedia.org/wiki/Rectifier_(neural_networks)#Softplus)\n",
-    "  rectification to make the minimum of this cost component 1.0\n",
+    "For a given node being optimized, for each potential pair of coordinates being considered, relative to each other node, calculate the Frobenius norm. Subtract a radius of 25 from the norm and use that for the sigmoid exponent. Get the product $u$ of all such sigmoids for the current node. This will not yet take into account the _two or more_ clause.\n",
     "\n",
     "$$\n",
     "u(x, y) =\n",
@@ -292,6 +288,10 @@
     "    }\n",
     "\\right)\n",
     "$$\n",
+    "\n",
+    "Divide by 1.04 to discount the effect of only one proximate node. Apply an outer parametric\n",
+    "[softplus](https://en.wikipedia.org/wiki/Rectifier_(neural_networks)#Softplus)\n",
+    "rectification to make the minimum of this cost component 1.0.\n",
     "\n",
     "$$\n",
     "\\mu(x, y) = 1 + \n",
