Start thinking about the 0.9 non-crowding cost

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "The 2D coordinates of each node are discrete and - for these purposes - unbounded. Since there are 25 nodes, there are 50 integer variables (xy for each node) to optimize. The hope is that even though there are no bounds, there will be enough sub-1.0 factors to have the optimization converge rather than force the nodes to fly apart.\n",
     "\n",
-    "In most modes of this optimization problem there are also between 2-3 biome regions extending out infinitely from the origin separated by straight lines. Each biome exactly encompasses one or more Cartesian quadrants. Each imposes a fixed cost or benefit to each node, but in the ideal case this cost does not change the \"farther into the biome\" a node gets. If I get the base optimization working well enough for a given biome configuration, I might expand this to selection of a biome configuration, for which there are currently 46 possibilities.\n",
+    "In most modes of this optimization problem there are also between 2-3 biome regions extending out infinitely from the origin separated by straight lines. Each biome exactly encompasses one or more Cartesian quadrants. Each imposes a fixed cost or benefit to each node, but in the ideal case this cost does not change the \"farther into the biome\" a node gets. If I get the base optimization working well enough for a given biome configuration, I might expand this to selection of a biome configuration, for which there are currently 34 possibilities.\n",
     "\n",
     "Cost Analysis\n",
     "===\n",
@@ -66,7 +66,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6eb5c800e55045ad9e5c2334a70ffcb6",
+       "model_id": "1af5c1f2632148cea7b4908c269f287f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -115,7 +115,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e749667f38a54cd3af5285cbeab0aaaf",
+       "model_id": "bba94f4c1a4e4a869e08aaf4d2482de0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -227,7 +227,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c86ffe7c2db4cb1ab59309d12deb6a6",
+       "model_id": "a041440cf2454f50ae8a98de0c269a4a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -317,7 +317,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "576f9c926c36443b925451afc0719573",
+       "model_id": "e0f65e3f08d947b6804a5c43d362cbe8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -376,8 +376,57 @@
     "\n",
     "This implies:\n",
     "\n",
-    "- Outside of the area near NPCs, the cost will be 0.9"
+    "- Outside of the area near NPCs, the cost will be 0.9\n",
+    "- If there is one other NPC within 25 tiles, and three other NPCs between 25 and 120 tiles, the cost is still 0.9\n",
+    "- If any of the above figures are exceeded, the cost increases to 1.0\n",
+    "\n",
+    "In exact terms, this cost could be expressed based on $a$, the number of NPCs within 25 tiles, and $b$, the number of NPCS between 25 and 120 tiles away:\n",
+    "\n",
+    "$$\n",
+    "\\mu = 0.9 + 0.1\\min\\left(\n",
+    "    1, \n",
+    "    \\max(0,a-1) + \\max(0,b-3)\n",
+    "\\right)\n",
+    "$$\n",
+    "\n",
+    "In approximate terms,\n",
+    "\n",
+    "$$\n",
+    "a = \n",
+    "\\lim_{\\alpha \\to \\infty}\n",
+    "\\sum_i\n",
+    "\\frac 1 {\n",
+    "    1 + e^{\\alpha (\n",
+    "        ||m_i - n||_F - 25\n",
+    "    )}\n",
+    "}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "b =\n",
+    "\\lim_{\\alpha \\to \\infty}\n",
+    "\\sum_i\n",
+    "\\frac 1 {\n",
+    "    \\left(\n",
+    "        1 + e^{\\alpha (\n",
+    "            25 - ||m_i - n||_F\n",
+    "        )}\n",
+    "    \\right)\n",
+    "    \\left(\n",
+    "        1 + e^{\\alpha (\n",
+    "            ||m_i - n||_F - 120\n",
+    "        )}\n",
+    "    \\right)\n",
+    "}\n",
+    "$$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
