Fill out formula for complex crowding

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -383,7 +383,8 @@
     "In exact terms, this cost could be expressed based on $a$, the number of NPCs within 25 tiles, and $b$, the number of NPCS between 25 and 120 tiles away:\n",
     "\n",
     "$$\n",
-    "\\mu = 0.9 + 0.1\\min\\left(\n",
+    "\\mu = 0.9 + (1-0.9)\n",
+    "\\min\\left(\n",
     "    1, \n",
     "    \\max(0,a-1) + \\max(0,b-3)\n",
     "\\right)\n",
@@ -392,41 +393,62 @@
     "In approximate terms,\n",
     "\n",
     "$$\n",
-    "a = \n",
-    "\\lim_{\\alpha \\to \\infty}\n",
+    "a(x,y) = -1 +\n",
+    "\\lim_{\\alpha_1 \\to \\infty}\n",
     "\\sum_i\n",
     "\\frac 1 {\n",
-    "    1 + e^{\\alpha (\n",
+    "    1 + e^{\\alpha_1 (\n",
     "        ||m_i - n||_F - 25\n",
     "    )}\n",
     "}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "b =\n",
-    "\\lim_{\\alpha \\to \\infty}\n",
+    "b(x,y) = -3 +\n",
+    "\\lim_{\\alpha_1 \\to \\infty}\n",
     "\\sum_i\n",
     "\\frac 1 {\n",
     "    \\left(\n",
-    "        1 + e^{\\alpha (\n",
+    "        1 + e^{\\alpha_1 (\n",
     "            25 - ||m_i - n||_F\n",
     "        )}\n",
     "    \\right)\n",
     "    \\left(\n",
-    "        1 + e^{\\alpha (\n",
+    "        1 + e^{\\alpha_1 (\n",
     "            ||m_i - n||_F - 120\n",
     "        )}\n",
     "    \\right)\n",
     "}\n",
+    "$$\n",
+    "\n",
+    "$a$ and $b$ range from -1 and -3 respectively, upward in steps of 1; and need to receive respective minima of 0, be summed, and then receive a collective maximum of 1, for a total of three softplus applications:\n",
+    "\n",
+    "$$\n",
+    "\\text{smin}(x) =\n",
+    "\\lim_{\\alpha_2 \\to \\infty}\n",
+    "\\frac 1 {\\alpha_2}\n",
+    "\\ln \\left(\n",
+    "    1 + e^{\\alpha_2 x}\n",
+    "\\right)\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\text{smax}(x) = 1 -\n",
+    "\\lim_{\\alpha_3 \\to \\infty}\n",
+    "\\frac 1 {\\alpha_3}\n",
+    "\\ln \\left(\n",
+    "    1 + e^{\\alpha_3 (1-x)}\n",
+    "\\right)\n",
+    "$$\n",
+    "        \n",
+    "$$\n",
+    "\\mu(x,y) = 0.9 + \n",
+    "(1 - 0.9)\n",
+    "\\text{smax} \\left(\n",
+    "    \\text{smin}(a(x,y)) + \\text{smin}(b(x,y))\n",
+    "\\right)\n",
     "$$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
